src/styles/tabs.css
div.filterControls {
  max-width: 100%;
  position: fixed;
  bottom: 24px;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  gap: 8px;
}

div.tabsContainer {
  border: var(--border-tab);
  border-radius: 8px;
  display: flex;
  justify-content: center;
  gap: 24px;
  padding: 0 24px;
  background-color: var(--color-bg-tab);
  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
}

div.tabsContainer > button {
  padding: 8px 0;
  background: transparent;
  border: none;
  width: 50px;
  color: white;
}

div.tabsContainer > button:active {
  background: inherit;
  box-shadow: none;
}

div.tabsContainer > button.all,
div.tabsContainer > button.active,
div.tabsContainer > button.done {
  font-weight: 700;
}

div.tabsContainer > button.default {
  font-weight: 300;
}

div.filterControls button.material-icons {
  background: var(--color-bg-tab);
  color: white;
  border: var(--border-tab);
  padding: 8px;
  border-radius: 50%;
}

